addinging coditional load balancer

--- a/RStudio/cfn-templates/ec2-rlstudio.yaml
+++ b/RStudio/cfn-templates/ec2-rlstudio.yaml
@@ -63,6 +63,11 @@ Parameters:
   ALBSubnet2:
     Type: String
     Description: ALBSubnet2 for ALB RStudio
+  LoadBalancerType:
+    Type: String
+    Description:  Enter internal if subnets are private subnets or enter internet-facing if subnets are public subnets 
+    AllowedValues : ["internal, "internet-facing"]
+    
 
 Conditions:
   IamPolicyEmpty: !Equals [!Ref IamPolicyDocument, "{}"]
