Add new permissions for security agent installation.

--- a/RStudio/cfn-templates/ec2-rlstudio.yaml
+++ b/RStudio/cfn-templates/ec2-rlstudio.yaml
@@ -88,8 +88,14 @@ Resources:
         Statement:
           - Effect: Allow
             Action:
+              - 'ssm:GetParameter*'
+              - 'secretsmanager:GetSecretValue'
               - "s3:*"
               - "ssm:*"
+              - 'kms:Decrypt'
+              - 'kms:GenerateDataKey'
+              - 'ec2:CreateTags'
+              - 'ec2:DeleteTags'
             Resource: "*"
           - Effect: Allow
             Action:
@@ -125,6 +131,34 @@ Resources:
           - !Ref "AWS::NoValue"
           - PolicyName: !Join ["-", [Ref: Namespace, "s3-egressstore-policy"]]
             PolicyDocument: !Ref EgressStoreIamPolicyDocument
+        - PolicyName: !Join ['-', [Ref: Namespace, 'tag-policy']]
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: 'Allow'
+                Action:
+                  - 'ec2:CreateTags'
+                  - 'ec2:DeleteTags'
+                Resource: !Sub 'arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/*'
+                Condition:
+                  StringLike:
+                    ec2:ResourceTag/Name: !Sub '${Namespace}-ec2-rstudio'
+        - PolicyName: !Join ['-', [Ref: Namespace, 'config-policy']]
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: 'Allow'
+                Action:
+                  - 'ssm:GetParametersByPath'
+                  - 'ssm:GetParameter'
+                Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/config/*'
+              - Effect: 'Allow'
+                Action:
+                  - 'secretsmanager:GetSecretValue'
+                  - 'kms:Decrypt'
+                  - 'kms:GenerateDataKey'
+                  - 's3:GetObject'
+                Resource: '*'
         - PolicyName:
             !Join ["-", [Ref: Namespace, "s3-bootstrap-script-policy"]]
           PolicyDocument:
