Add proxy redirect

--- a/RStudio/machine-images/config/infra/files/rstudio/nginx.conf
+++ b/RStudio/machine-images/config/infra/files/rstudio/nginx.conf
@@ -81,6 +81,7 @@ http {
 
     location /auth-do-sign-in {
       proxy_pass http://localhost:8787;
+      proxy_redirect https://localhost:8787/ https://$host/;
       proxy_set_header Cookie "csrf-token=$request_id";
       proxy_method POST;
       proxy_set_header Content-Type application/x-www-form-urlencoded;
